2nd part of div test

--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -102,8 +102,9 @@
       <li><a id="menu_contact" href="/cgi-bin/public.cgi?rm=contact_form">Contact</a></li>
     </ul>
   </nav>
+  </div>
 </div><!--dev test-->
-
+<div id="container">
 <!--***************ARIA MARKER 'SEARCH'***************-->
 <div id="search-container">
   <div id="search" role="search">
