--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -584,6 +584,7 @@ button {
   margin: auto;
 }
 
+/*
 fieldset input {
 	vertical-align: middle;
 }
@@ -609,11 +610,12 @@ div.login label {
   font-size: 1em;
 }
 
+
 div.login input {
   margin-left: 10px;
 }
 
-/* image courtesy of http://www.famfamfam.com/lab/icons/silk/  */
+image courtesy of http://www.famfamfam.com/lab/icons/silk/ 
 #authen_loginfield {
   background-color: #fff;
   border-top: solid 1px #565656;
@@ -624,7 +626,7 @@ div.login input {
   margin: 0.3em 1.5em;
   width: 12em;
 }
-/* image courtesy of http://www.famfamfam.com/lab/icons/silk/  */
+image courtesy of http://www.famfamfam.com/lab/icons/silk/  
 #authen_passwordfield {
   background-color: #fff;
   border-top: solid 1px #565656;
@@ -635,6 +637,7 @@ div.login input {
   margin: 0.3em 1.5em;
   width: 12em;
 }
+*//*dev test*/
 
 #divChangePass { 
 	display: none;
