--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -559,7 +559,7 @@ button {
   display: block;
   clear: all;
   margin-top: 40px;
-  border: 2px solid #c3c3c3;
+  border: 2px solid #b3b3b3;
   background: #e3e3e3;
   font-size: 1em;
   font-family: sans-serif;
