changed border to fill table

--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -485,7 +485,7 @@ button {
   	width: 70%;
   	margin: 1em;
 	background: #e3e3e3;
-	border: 2px solid #505050;
+	border: 2px solid #b3b3b3;
 	color: #505050;
 	padding: .5em;
 }
