--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -232,6 +232,27 @@ nav li a.current_tab {
 	padding: 0em;
 }
 
+#progress_empty {
+	position:relative;
+	height:15px;
+	width:90%;
+	background-color:#e3e3e3;
+	border:1px solid #b3b3b3;
+	padding:0px;
+}
+#progress_filler {
+	height:14px;
+	width:;/*is styled in, 'fill-client-public.js'*/
+	left:1px;
+	background-color:#b3b3b3;
+	padding-top:5px;
+	padding:0px;
+	position:relative;
+	margin-right:200px;
+	margin-top:-21px;
+}
+
+
 #main-info-left
 {
 	float: left;
