--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -239,6 +239,7 @@ nav li a.current_tab {
 	background-color:#e3e3e3;
 	border:1px solid #b3b3b3;
 	padding:0px;
+	overflow: hidden;
 }
 #progress_filler {
 	height:20px;
