background colour for progress bar

--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -245,7 +245,7 @@ nav li a.current_tab {
 	height:20px;
 	width:;/*is styled in, 'fill-client-public.js'*/
 	left:1px;
-	background-color:#b3b3b3;
+	background-color:#f3f3f3;
 	padding-top:5px;
 	padding:0px;
 	position:relative;
