--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -235,17 +235,17 @@ nav li a.current_tab {
 #progress_empty {
 	position:relative;
 	height:20px;
-	width:75%;
-	background-color:#e3e3e3;
+	width:70%;
+	background-color:#f3f3f3;
 	border:1px solid #b3b3b3;
 	padding:0px;
-	overflow: hidden;
+	overflow: hidden;!important
 }
 #progress_filler {
 	height:20px;
 	width:;/*is styled in, 'fill-client-public.js'*/
 	left:1px;
-	background-color:#f3f3f3;
+	background-color:#b3b3b3;
 	padding-top:5px;
 	padding:0px;
 	position:relative;
