progress bar max width

--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -236,6 +236,7 @@ nav li a.current_tab {
 	position:relative;
 	height:20px;
 	width:70%;
+	max-width: 200px;
 	background-color:#f3f3f3;
 	border:1px solid #b3b3b3;
 	padding:0px;
