--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -223,6 +223,7 @@ nav li a.current_tab {
 {
 	float: left;
 	width: 18%;
+	min-width: 210px;
 	margin-bottom: 1.5em;
 	display: inline;
   	padding: 1em; 
