--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -66,7 +66,7 @@ h3 {
 	width: 90%;
 	height: auto;
 	min-width: 480px;
-	
+	clear: both;  /* start fresh with floatiness within the container */
 }
 
 /**HEADER STYLES**/
