--- a/templates/public/registration.tmpl
+++ b/templates/public/registration.tmpl
@@ -68,6 +68,30 @@ $('document').ready(function(){
         }
     });
 
+
+    $( "#password2" ).blur(function() {
+
+        if ($("#password").val() === undefined 
+           || $("#password").val().length == 0 
+           || $("#password2").val() === undefined 
+           || $("#password2").val().length == 0) {
+
+            alert("Please enter a password, and then re-type the password.");
+            $("#password").focus();
+
+        } else {
+            if ($("#password").val() === $("#password2").val()) {
+                $("#password_message").text("Passwords match, good!");
+            } else {
+
+                $("#password_message").text("Your re-typed password did not match your origial password.  Please enter (and then re-type) a new password.");
+                $("#password_message").stop(true,true).effect("highlight", {}, 2000);
+                $("#password").focus();
+
+            }
+        }
+    });
+
 });
 
 </script>
@@ -97,22 +121,30 @@ $('document').ready(function(){
       <h2>Registration form</h2>
       <form id="registration_form" action="/cgi-bin/register-patron.cgi" method="POST">
 
+	<!-- NOTE: the input field ids are used in the register_patron function
+	     in patron-registration-1.0.js to pull the data from the fields and
+	     create the paramters to the ajaxy cgi-bin/register-patron.cgi
+
+	     This form's submit is captured (above, in the document.ready() function)
+	     to do some minimal validation before actually submitting.
+	  -->
+
         <table id="fill-table">
-        	<tr>
+          <tr>
         	  <th>Home library</th>
         	  <td><p id="home_library"></p></td>
         	</tr>
           <tr>
         	  <th>Your name</th>
-        	  <td><input type="text" id="patron_name" name="patron_name"></td>
+        	  <td><input type="text" id="patron_name"></td>
         	</tr>
           <tr>
         	  <th>Library card number</th>
-        	  <td><input type="text" id="barcode" name="patron_card"></td>
+        	  <td><input type="text" id="barcode"></td>
         	</tr>
           <tr>
         	  <th>Email address</th>
-        	  <td><input type="text" id="email_address" name="patron_email"></td>
+        	  <td><input type="text" id="email_address"></td>
         	</tr>
           <tr>
         	  <td colspan="2"><strong>You also need to choose a username and password for this system:</strong></td>
@@ -121,11 +153,15 @@ $('document').ready(function(){
         	  <th>Username</th>
 		  <!-- this id="username" was conflicting with the username in the header,
 		    so I've renamed this one to "reg_username". -->
-        	  <td><input type="text" id="reg_username" name="patron_username" size=30 maxlength=50><br><p id="username_message"></p></td>
+        	  <td><input type="text" id="reg_username" size=30 maxlength=50><br><p id="username_message"></p></td>
         	</tr>
           <tr>
         	  <th>Password</th>
-        	  <td><input type="text" id="password" name="patron_password" size=30 maxlength=50></td>
+        	  <td><input type="password" id="password" size=30 maxlength=50></td>
+        	</tr>
+          <tr>
+        	  <th>Re-type Password</th>
+        	  <td><input type="password" id="password2" size=30 maxlength=50><br><p id="password_message"></p></td>
         	</tr>
         </table>
 
@@ -140,6 +176,6 @@ $('document').ready(function(){
     </div>
     <p> </p>
 
-  </div><!-- div id main -->
+  </div><!-- div id main-info-right -->
 </div><!-- div id container -->
 <TMPL_INCLUDE NAME="footer.tmpl">
