--- a/templates/public/header.tmpl
+++ b/templates/public/header.tmpl
@@ -87,7 +87,7 @@
     <li><a id="menu_myaccount" href="/cgi-bin/public.cgi?rm=myaccount_form">My Account</a></li>
     <li><a id="menu_current" href="/cgi-bin/public.cgi?rm=current_form">Current Borrowing</a></li>
     <li><a id="menu_about" href="/cgi-bin/public.cgi?rm=about_form">About</a></li>
-    <li><a id="menu_about" href="/cgi-bin/public.cgi?rm=help_form">Help</a></li>
+    <li><a id="menu_help" href="/cgi-bin/public.cgi?rm=help_form">Help</a></li>
     <li><a id="menu_faq" href="/cgi-bin/public.cgi?rm=faq_form">FAQ</a></li>
     <li><a id="menu_contact" href="/cgi-bin/public.cgi?rm=contact_form">Contact</a></li>
   </ul>
