Revert "index width test"
This reverts commit de97e26beecf56623f64bcda37325ff1b0e7151c.

--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -292,7 +292,7 @@ nav li a.current_tab {
 #main-info-welcome 
 {
 	float: left;
-	width: ;
+	width: 50%;
 	height: auto;
 	font-size: 1.5em;
 	margin: 1em;
