small tweak to margin in index

--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -308,7 +308,7 @@ nav li a.current_tab {
 	width: 50%;
 	height: auto;
 	padding: 1em;
-	margin: 1em 0em;
+	margin-bottom: 1em;
 }
 
 #aside-img-right
