--- a/templates/public/current.tmpl
+++ b/templates/public/current.tmpl
@@ -92,7 +92,7 @@ $('document').ready(function(){
 </script>
 <div class="clear">
   <div id="container">
-
+<main>
       <div id="middlecontent">
         <div id="waitDiv">
           Loading... <img src="/wait.gif">
@@ -113,6 +113,25 @@ $('document').ready(function(){
         	  </tbody>
         	</table>
       </div>
+      <aside>
+        <table class="fill-table">
+          
+<thead><th>What the 'status' means:</th><th>?</th></thead>
+<tr><td>ILL-Request Your library has requested it.</td></tr>
+<tr><td>ILL-Answer|Will-supply</td><td>The lender will lend it.</td></tr>
+<tr><td>ILL-Answer|Hold-placed</td><td>The lender has placed a hold for you. They estimate that it will be shipped on the date shown in the 'message' column.</td></tr>
+<tr><td>ILL-Answer|Unfilled The lender cannot lend it. Your library will try another lender if possible.</td></tr>
+<tr><td>Shipped The lender has shipped it to your library.</td></tr>
+<tr><td>Received</td><td>Your library has received it from the lender, and should be contacting you soon.</td></tr>
+<tr><td>Returned </td><td> Your library has returned it to the lender.</td></tr>
+<tr><td>Checked-in  </td><td>The lender has received the returned book.</td></tr>
+<tr><td>Message </td><td>General status message.</td></tr>
+<tr><td>Cancelled </td><td>Your library has cancelled the request to that lender. They may try again with a different lender.</td></tr>
+</td></tr>
+
+        </table>
+      </aside>
+      </main>
   </div>
 </div>
 <TMPL_INCLUDE NAME="footer.tmpl">
