changes to current page cont2

--- a/templates/public/current.tmpl
+++ b/templates/public/current.tmpl
@@ -92,7 +92,7 @@ $('document').ready(function(){
 </script>
 <div class="clear">
   <div id="container">
-<div id="main">
+<div id="main-info-right">
       <div id="middlecontent">
         <div id="waitDiv">
           Loading... <img src="/wait.gif">
@@ -114,7 +114,7 @@ $('document').ready(function(){
         	</table>
       </div>
       </div><!--div id main-->
-      <div id="aside">
+      <div id="aside-img-left">
         <table id="fill-table">
           
 <thead><th>What the 'status' means:</th><th>?</th></thead>
