--- a/templates/public/about.tmpl
+++ b/templates/public/about.tmpl
@@ -12,8 +12,8 @@
   </div>
 
   <div id="main-info-right" class="tone-box">
-        <h3>About</h3>
-        <p>fILL, the Manitoba public libraries interlibrary-loan requesting system.</p>
+        <h2>About</h2>
+        <p><strong>fILL, the Manitoba public libraries interlibrary-loan requesting system.</strong></p>
         <p>fILL connects your local library to the millions of items available in Manitoba&rsquo;s libraries. If you were unable to find an item after searching your library&rsquo;s catalogue you can use fILL to find it and have it delivered to your local public library.  
         </p>
         <p>
