--- a/templates/public/faq.tmpl
+++ b/templates/public/faq.tmpl
@@ -18,31 +18,30 @@
 	<li><a href="#q8"><h3>Do I pay late fines at my local public library or to library the item came from</h3></a></li>
 </ul>
 <hr><br>-->
+<h3>How long does it take to get something delivered?</h3>
+<p>Wait times can vary, but typically, it takes between a week and two weeks for an item to be delivered. Items already on loan may take longer.</p>
 
+<h3>Where does the requested item come from?</h3>
+<p>The item that you have requested could come from any public library in Manitoba.</p>
 
-<a name="q1"><h3>How long does it take to get something delivered?</h3></a>
-	<p>Wait times can vary.  Items already on loan can take longer to be delivered.  Typically, it takes between a week to  two weeks for an item to be delivered.  And some items may never be delivered because not all libraries participate in the inter-library loan program.</p>
+<h3>Why can’t it just get sent to my home?</h3>
+<p>The great thing about interlibrary loan is that it allows you to access materials from all over the province. The one stipulation is that this is mediated by your local public library, which borrows materials on its own behalf to lend to you.</p>
 
-<a name="q2"><h3>Where does the requested item come from?</h3></a>
-	<p>The item that you have requested could come from any public library in Manitoba.</p>
+<h3>Why is it called fILL?</h3>
+<p>ILL stands for interlibrary loan, and the “f” stands for free and open-source software (FOSS). These days it is called fILL because with the software we are able to easily fill your inter-library loan request.</p>
 
-<a name="q3"><h3>Why can&rsquo;t it just get sent to my home?</h3></a>
-	<p>Your library membership entitles you to borrow from your local library only.  Your local library can loan you materials from another library, as they have borrowed on their behalf.</p>
+<h3>Can I renew my items?</h3>
+<p>You will not be able to renew the item directly. You can make a renewal request through your library, and they will make the request to the lender and notify you. It is the decision of the lending library whether to allow inter-library loan items to be renewed.</p>
 
-<a name="q4"><h3>Why is it called fILL?</h3></a>
-	<p>It is called fILL because with the software we are able to easily <strong>fill</strong> your inter-library loan request.</p>
+<h3>How many items can I request?</h3>
+<p>Interlibrary loans count as part of your borrowing from your local public library. The maximum number of items you can take out at one time is up to your library.</p>
 
-<a name="q5"><h3>Can I renew my items?</h3></a>
-	<p>You will not be able to review the item directly. You can make a renewal request at your library and they will make the request from the lender and notify you.  It is a local policy decision to allow inter-library loan items to be renewed.</p>
+<h3>What happens if the item I want is already on loan?</h3>
+<p>Your local library will place a hold on the item, and after it is returned, the ILL request will be processed.</p>
 
-<a name="q6"><h3>How many items can I request at one time?</h3></a>
-	<p>The maximum number of items a patron can take out at  one time  is up to your public library.</p>
+<h3>Do I pay late fines to my local public library or to the lending library?</h3>
+<p>If your item is late, you will pay late fees to your local public library.</p>
 
-<a name="q7"><h3>What happens if the item I want is already on loan?</h3></a>
-	<p>Your local library will place a hold on the item, after it is returned, it will be delivered to your library for pick up.</p>
-
-<a name="q8"><h3>Do I pay late fines at my local public library or to library the item came from</h3></a>
-	<p>You pay your late fees at your local public library.</p>
 
 
 </div><!--main-info-left-->
@@ -54,7 +53,9 @@
 </div><!--div id container -->
 <!--
       <p class="debuginfo">Logged in as [<TMPL_VAR NAME="username">]</p>
+
       <p class="debuginfo">Session id [<TMPL_VAR NAME="sessionid">]</p>
+
 -->
 
 
