small type in faq

--- a/templates/public/faq.tmpl
+++ b/templates/public/faq.tmpl
@@ -24,7 +24,7 @@
 <h3>Where does the requested item come from?</h3>
 <p>The item that you have requested could come from any public library in Manitoba.</p>
 
-<h3>Why can’t it just get sent to my home?</h3>
+<h3>Why can&rsquo;t it just get sent to my home?</h3>
 <p>The great thing about interlibrary loan is that it allows you to access materials from all over the province. The one stipulation is that this is mediated by your local public library, which borrows materials on its own behalf to lend to you.</p>
 
 <h3>Why is it called fILL?</h3>
