changed "at your library" to "searches to start with"

--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -159,13 +159,13 @@
  
   <div id="recordview">
     <div id="AVnotice">
-     <h2>Available At Your Local Library</h2><br>
+     <h2>Some searches to start with: Man Booker 2013 shortlist...</h2><br>
 
         <!-- The class="coverlink" is used to drive the click-the-image-to-search code;
 	     The keywords to search for are taken from the "title" attribute.
 	-->
         <a href="#" class="coverlink" title="Jim Crace Harvest" >
-	  <img class="covers" alt="Man Booker shortlist 2013 book cover"src="/img/covers/1.png">
+	  <img class="covers" alt="Man Booker shortlist 2013 book cover" src="/img/covers/1.png">
 	</a>
         <a href="#" class="coverlink" title="Colm Toibin The Testamant of Mary">
 	  <img class="covers" alt="Man Booker shortlist 2013 book cover" src="/img/covers/7.png">
@@ -177,10 +177,10 @@
 	  <img class="covers" alt="Man Booker shortlist 2013 book cover" src="/img/covers/68.png">
 	</a>
         <a href="#" class="coverlink" title="Eleanor Catton The Luminaries">
-	  <img class="covers" alt="Man Booker shortlist 2013 book cover"src="/img/covers/73.png">
+	  <img class="covers" alt="Man Booker shortlist 2013 book cover" src="/img/covers/73.png">
 	</a>
         <a href="#" class="coverlink" title="Jhumpa Lahiri The Lowland">
-	  <img class="covers" alt="Man Booker shortlist 2013 book cover"src="/img/covers/90.png">
+	  <img class="covers" alt="Man Booker shortlist 2013 book cover" src="/img/covers/90.png">
 	</a>
         
       </div>
