--- a/templates/public/help.tmpl
+++ b/templates/public/help.tmpl
@@ -12,13 +12,21 @@
 
   <div id="main-info-right" class="tone-box">
         <h2>Help</h2>
+
+	<p>Here is a tutorial on using fILL to find and request titles from any Manitoba public library:</p>
+
+	<object data="/Patrons%20-%20Searching%20tutorial.pdf" type="application/pdf" width="700" height="900">
+	  alt : <a href="/Patrons%20-%20Searching%20tutorial.pdf">Patrons - Searching tutorial.pdf</a>
+	</object>
+
+<!--
         <p>The fILL help page is designed to help you to better search for the book you want.<br />
 
            Scroll down the page to locate the information you are looking for or 
         </p>
         <h3>Tutorial</h3>
         <p style="text-decoration:underline;"><strong><a href="/Patrons%20-%20Searching%20tutorial.pdf">View a quick tutorial about using fILL.</a></strong></p>
-
+-->
        
   </div><!--main-info-right-->
 </div><!--container div-->
