--- a/templates/public/about.tmpl
+++ b/templates/public/about.tmpl
@@ -23,7 +23,7 @@
 
         <h3>Privacy</h3>
         <p>
-        	fILL does not keep any record of your searches or requests after your books are returned.  
+        	fILL does not keep any record of your searches or requests after your items are returned.  
         	Logging in is necessary for your library to know who is making the request, but no information 
         	linking your account to any searches or requests is kept after the ILL transaction is completed.
         	Some non-identifying data may be retained for statistical purposes.
