--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -150,7 +150,7 @@
  
   <div id="recordview">
     <div id="AVnotice">
-     <h2>Available At Your Local Library</h2><br>
+     <h2>Highlights</h2><br>
 
         <a href="/"><img class="covers" alt="Man Booker shortlist 2013 book cover" title="" src="/img/covers/1.png"></a>
         <a href="/"><img class="covers" alt="Man Booker shortlist 2013 book cover" title="" src="/img/covers/7.png"></a>
@@ -159,6 +159,7 @@
         <a href="/"><img class="covers" alt="Man Booker shortlist 2013 book cover" title="" src="/img/covers/73.png"></a>
         <a href="/"><img class="covers" alt="Man Booker shortlist 2013 book cover" title="" src="/img/covers/90.png"></a>
         
+        <p><strong>2013 Man Booker Shortlist</strong></p>
       </div>
       <!--
 
