Revert "small changes to text"
Conflicts:
	templates/public/search.tmpl

--- a/templates/public/faq.tmpl
+++ b/templates/public/faq.tmpl
@@ -31,7 +31,7 @@
 <p>ILL stands for interlibrary loan, and the “f” stands for free and open-source software (FOSS). These days it is called fILL because with the software we are able to easily fill your inter-library loan request.</p>
 
 <h3>Can I renew my items?</h3>
-<p>You will not be able to renew the item directly. You can make a renewal request through your library, and they will make the request to the lending library and notify you. It is the decision of the lending library whether to allow inter-library loan items to be renewed.</p>
+<p>You will not be able to renew the item directly. You can make a renewal request through your library, and they will make the request to the lender and notify you. It is the decision of the lending library whether to allow inter-library loan items to be renewed.</p>
 
 <h3>How many items can I request?</h3>
 <p>Interlibrary loans count as part of your borrowing from your local public library. The maximum number of items you can take out at one time is up to your library.</p>
