covers text update

--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -159,7 +159,7 @@
  
   <div id="recordview">
     <div id="AVnotice">
-     <h2>Some searches to start with: Man Booker 2013 shortlist...</h2><br>
+     <h2>HIghlights</h2><br>
 
         <!-- The class="coverlink" is used to drive the click-the-image-to-search code;
 	     The keywords to search for are taken from the "title" attribute.
@@ -182,7 +182,7 @@
         <a href="#" class="coverlink" title="Jhumpa Lahiri The Lowland">
 	  <img class="covers" alt="Man Booker shortlist 2013 book cover" src="/img/covers/90.png">
 	</a>
-        
+       <p><strong>Man Booker 2013 shortlist</strong></p> 
       </div>
       <!--
 
