fill-help class added to style object tag

--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -565,6 +565,11 @@ button {
 	clear: both;
 }
 
+.fill-help {
+	width: 100%;
+	text-align: center;
+}
+
 /*------------login styles---------------------------------*/
 
 .login {
