--- a/templates/public/help.tmpl
+++ b/templates/public/help.tmpl
@@ -15,7 +15,7 @@
 
 	<p>Here is a tutorial on using fILL to find and request titles from any Manitoba public library:</p>
 
-	<object data="/Patrons%20-%20Searching%20tutorial.pdf" type="application/pdf">
+	<object class-"fill-help" data="/Patrons%20-%20Searching%20tutorial.pdf" type="application/pdf">
 	  alt : <a href="/Patrons%20-%20Searching%20tutorial.pdf">Patrons - Searching tutorial.pdf</a>
 	</object>
 
