--- a/templates/public/about.tmpl
+++ b/templates/public/about.tmpl
@@ -14,20 +14,24 @@
   <div id="main-info-right" class="tone-box">
         <h2>About</h2>
         <p><strong>fILL, the Manitoba public libraries interlibrary-loan requesting system.</strong></p>
-        <p>fILL connects your local library to the millions of items available in Manitoba&rsquo;s libraries. If you were unable to find an item after searching your library&rsquo;s catalogue you can use fILL to find it and have it delivered to your local public library.  
+        <p>fILL is , the interlibrary-loan management system for all Manitoba public libraries. It connects your local library to the millions of items available in Manitoba&rsquo;s libraries.</p>
+        <p>If you are unable to find an item after searching your library&rsquo;s catalogue you can use fILL to find it online and have it delivered to your local public library.
         </p>
         <p>
-  	        fILL enables you to quickly and easily search the catalogues of many Manitoba public libraries at once.  When you find an item that you'd like to request, it enables you to ask your home library to try to get it for you.
+        fILL enables library patrons to quickly and easily search the catalogues of many Manitoba public libraries at the same time. When you find the item that you'd like to request, fILL prepares the inter-library loan request for your public library and the local library staff to try to borrow the item from the lending library  for you.
         </p>
-
-
         <h3>Privacy</h3>
         <p>
-        	fILL does not keep any record of your searches or requests after your books are returned.  
-        	Logging in is necessary for your library to know who is making the request, but no information 
-        	linking your account to any searches or requests is kept after the ILL transaction is completed.
-        	Some non-identifying data may be retained for statistical purposes.
+        fILL does not keep a record of your search history nor  does it keep a record of request transactions after  borrowed items are returned. Logging into your account is necessary in order for your library to validate the request, however no information linking your account to searches or requests is kept after the ILL transaction is completed. Some non-identifying data may be retained for statistical purposes.
         </p>
+
+
+
+
+
+
+
+
   </div><!--main-info-right-->
 </div><!--container div-->
 
