object styles test

--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -567,7 +567,8 @@ button {
 
 .fill-help {
 	width: 100%;
-	text-align: center;
+	min-width: 480px;
+	margin: auto;
 }
 
 /*------------login styles---------------------------------*/
