testing HTML5/ARIA for older browsers

--- a/templates/public/header.tmpl
+++ b/templates/public/header.tmpl
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head><title><TMPL_VAR name="pagetitle"></title>
+
+<!--[if lt IE 9]>
+  <script>
+    var e = ("abbr,article,aside,audio,canvas,datalist,details," +
+      "figure,footer,header,main,mark,menu,meter,nav,output," +
+      "progress,section,time,video").split(',');
+    for (var i = 0; i < e.length; i++) {
+      document.createElement(e[i]);
+    }
+  </script>
+<![endif]-->
+
 <!-- <link type="text/css" rel="stylesheet" href="/fILL-public.1.0.css"> -->
 <link type="text/css" rel="stylesheet" href="/css/feedstyles.1.1.css">
 <link type="text/css" rel="stylesheet" href="/css/fILL-public-accessible.1.1.css">
