change password margin

--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -669,7 +669,7 @@ image courtesy of http://www.famfamfam.com/lab/icons/silk/
 	display: none;
 	padding: .8em;
   	width: 70%;
-  	margin: 1em auto;
+  	margin: auto;
 	background: #f3f3f3;
 	border: 2px solid #505050;
 	color: #505050;
