--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -171,7 +171,7 @@
  
   <div id="recordview">
     <div id="AVnotice">
-     <h2>HIghlights</h2><br>
+     <h2>Featured</h2><br>
 
         <!-- The class="coverlink" is used to drive the click-the-image-to-search code;
 	     The keywords to search for are taken from the "title" attribute.
