--- a/templates/public/about.tmpl
+++ b/templates/public/about.tmpl
@@ -13,8 +13,7 @@
 
   <div id="main-info-right" class="tone-box">
         <h2>About</h2>
-        <p><strong>fILL, the Manitoba public libraries interlibrary-loan requesting system.</strong></p>
-        <p>fILL is , the interlibrary-loan management system for all Manitoba public libraries. It connects your local library to the millions of items available in Manitoba&rsquo;s libraries.</p>
+        <p>fILL is the interlibrary loan management system for all Manitoba public libraries. It connects your local library to the millions of items available in Manitoba&rsquo;s libraries.</p>
         <p>If you are unable to find an item after searching your library&rsquo;s catalogue you can use fILL to find it online and have it delivered to your local public library.
         </p>
         <p>
@@ -22,7 +21,7 @@
         </p>
         <h3>Privacy</h3>
         <p>
-        fILL does not keep a record of your search history nor  does it keep a record of request transactions after  borrowed items are returned. Logging into your account is necessary in order for your library to validate the request, however no information linking your account to searches or requests is kept after the ILL transaction is completed. Some non-identifying data may be retained for statistical purposes.
+        fILL does not keep a record of your search history nor  does it keep a record of request transactions after borrowed items are returned. Logging into your account is necessary in order for your library to validate the request; some non-identifying data may be retained for statistical purposes.
         </p>
 
 
