--- a/templates/public/current.tmpl
+++ b/templates/public/current.tmpl
@@ -39,8 +39,8 @@ $('document').ready(function(){
             { "mDataProp": "title" },
             { "mDataProp": "author" },
             { "mDataProp": "status" },
-            { "mDataProp": "ts" },
-            { "mDataProp": "libraries_tried" }
+            { "mDataProp": "libraries_tried" },
+            { "mDataProp": "ts" }
         ]
 
     });
@@ -106,7 +106,7 @@ $('document').ready(function(){
         	<table id="datatable_borrowing" class="display">
         	  <thead>
         	    <tr>
-        	      <th></th><th>cid</th><th>Title</th><th>Author</th><th>Status</th><th>Status Updated</th><th> </th>
+        	      <th></th><th>cid</th><th>Title</th><th>Author</th><th>Status</th><th>Details</th><th>Status Updated</th>
         	    </tr>
         	  </thead>
         	  <tbody>
