my account button tweaks

--- a/templates/public/myaccount.tmpl
+++ b/templates/public/myaccount.tmpl
@@ -73,10 +73,10 @@ $('document').ready(function(){
       <h2>My Account</h2>
       <table id="fill-table">
         <tr><th scope="row">Name</th><td><TMPL_VAR name="name"></td></tr>
-        <tr><th scope="row">fILL username</th><td><TMPL_VAR name="username"></td></tr>
+        <tr><th scope="row">Username</th><td><TMPL_VAR name="username"></td></tr>
         <tr><th scope="row">Home library</th><td><TMPL_VAR name="library"></td></tr>
         <tr><th scope="row">Account status</th><td><TMPL_VAR name="is_enabled"></td></tr>
-        <tr><th scope="row">fILL Patron Identification</th><td id="pid"><TMPL_VAR name="pid"></td></tr>
+        <tr><th scope="row">Patron ID number</th><td id="pid"><TMPL_VAR name="pid"></td></tr>
       </table>
     
     <a id="showChangePassButton" href="javascript:void(0)" onclick="toggleChangePassDiv()" class="button-left" role="button" type="button">Change password</a>
