normalize the use of the phrase "interlibrary loan"

--- a/templates/public/about.tmpl
+++ b/templates/public/about.tmpl
@@ -17,7 +17,7 @@
         <p>If you are unable to find an item after searching your library&rsquo;s catalogue you can use fILL to find it online and have it delivered to your local public library.
         </p>
         <p>
-        fILL enables library patrons to quickly and easily search the catalogues of many Manitoba public libraries at the same time. When you find the item that you'd like to request, fILL prepares the inter-library loan request for your public library and the local library staff to try to borrow the item from the lending library  for you.
+        fILL enables library patrons to quickly and easily search the catalogues of many Manitoba public libraries at the same time. When you find the item that you'd like to request, fILL prepares the interlibrary loan request for your public library and the local library staff to try to borrow the item from the lending library  for you.
         </p>
         <h3>Privacy</h3>
         <p>
