--- a/templates/public/welcome.tmpl
+++ b/templates/public/welcome.tmpl
@@ -8,15 +8,15 @@
 
       <h1>Welcome!</h1>
       <br />
-      <p>Welcome to the Manitoba public libraries interlibrary-loan requesting system.</p>
+      <p>Welcome to the Manitoba public libraries interlibrary loan requesting system.</p>
       <br />
       <p>
 	fILL enables you to quickly search the catalogues of many Manitoba public libraries at once.  When you find an item
 	that you'd like to request, it allows you to ask your home library to try to get it for you.
       </p>
       <br/>
-      <strong>See the status of your Interlibrary Loan requests!</strong>
-      <p>Click on the new menu item, <strong>Current borrowing</strong>, to see the status of all Interlibrary Loan requests
+      <strong>See the status of your interlibrary loan requests!</strong>
+      <p>Click on the new menu item, <strong>Current borrowing</strong>, to see the status of all interlibrary loan requests
 	that you currently have active.
       </p>
       <p>From this screen, you will be able to tell whether another library has been able to fill your request, when they
