--- a/templates/welcome.tmpl
+++ b/templates/welcome.tmpl
@@ -6,7 +6,7 @@
 <div id="main-info-right" class="tone-box">
       <h1>Welcome!</h1>
       <br />
-      <p>This is the Manitoba public libraries' Z39.50 spray search and interlibrary-loan requesting system.</p>
+      <p>This is the Manitoba public libraries' Z39.50 spray search and interlibrary loan requesting system.</p>
       <br />
       <h3>fILL User's Guide</h3>
       <br />
