updated text on login page

--- a/templates/public/login.tmpl
+++ b/templates/public/login.tmpl
@@ -32,9 +32,9 @@ $('document').ready(function(){
         </fieldset>
       </div>
       <div class="login-footer">
-        <p>Not a user?
+        <p>Don&rsquo;t have an account?</p>
           <a href="?rm=registration_form" type="button" role="button" id="fill-button">Sign Up!</a>
-        </p>
+
         <p>If you cannot remember your user name or password, please contact your local public library.</p>
       </div>
     </div><!--div class login-->
