small change to submit text
from GO to Go

--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -137,7 +137,7 @@
 	   If you change the id here, change it in fILL_client-public too,
 	   or the automatic search won't fire.
 	-->
-      <input id="search-submit-button" type="submit" value="GO">
+      <input id="search-submit-button" type="submit" value="Go">
     </form>
   </div>
 </div> <!-- search-container -->
