--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -75,11 +75,13 @@ h3 {
 header {
 	display: ;	
 	padding-top: 1em;
+	height: auto;
 }
 
 #header-left {
 	float: left;
 	width: 49%;
+	height: auto;
 	display: inline;
 }
 
@@ -102,6 +104,7 @@ header {
 	float: left;
 	clear: left;
 	display: inline;
+	height: auto;
 	font-size: 1.2em;
 	font-weight: bold;
 	line-height: 0px;
