dev test to target label on login

--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -662,6 +662,7 @@ div.login label {
   display: block;
   clear: left;
   float: left;
+  color: red;/*dev test*/
   text-align: center;
   padding: 0;
   width: 8em;
