--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -663,6 +663,7 @@ div.login label {
   color: red;/*dev test*/
   text-align: center;
   padding: 0;
+  margin-right: 2em;
   width: 8em;
   font-size: 1em;
 }
