--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -227,7 +227,7 @@
 
       <div id="pager"></div>
       <div id="navi"></div>
-      <p>Click on the title for more information.</p>
+      <p>Click on a title for more information.</p>
       <div id="results"></div>
   </div>
   
