margin back on welcome

--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -298,7 +298,7 @@ nav li a.current_tab {
 	width: 50%;
 	height: auto;
 	font-size: 1.5em;
-	margin: ;
+	margin: 1em;
   	padding: 1.25em; 
   	background: #e3e3e3;
 	border: 1px solid  #c9c9c9;  
