welcome box id padding fixed

--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -305,7 +305,7 @@ nav li a.current_tab {
 	font-size: 1.2em;
 	border: 0px;
 	height: auto;
-	padding: 1em 0em;
+	padding: 1em;
 	margin-top: 1em;
 }
 
