--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -473,6 +473,13 @@ button {
 	font-size: 1.4em;
 	margin: .5em;
 	padding: .3em;
+	border: 1px solid #000;
+	margin: 10px;
+	background: #183935;
+	color: #fff;!important
+	font-size: 1.4em;
+	text-transform: capitalize;
+	cursor: pointer;
 }
 
 .button-left:link {
