file size to help pdf

--- a/templates/public/help.tmpl
+++ b/templates/public/help.tmpl
@@ -18,7 +18,7 @@
 	<object class="fill-help" data="/Patrons%20-%20Searching%20tutorial.pdf" type="application/pdf" height="900">
 	  alt : <a href="/Patrons%20-%20Searching%20tutorial.pdf">Patrons - Searching tutorial.pdf</a>
 	</object>
-  <p>Or click here to <a href="/Patrons%20-%20Searching%20tutorial.pdf">download PDF</a></p>
+  <p>Or click here to <a href="/Patrons%20-%20Searching%20tutorial.pdf">download PDF</a>[285 KB]</p>
 <!--
         <p>The fILL help page is designed to help you to better search for the book you want.<br />
 
