updated footer text

--- a/templates/public/footer.tmpl
+++ b/templates/public/footer.tmpl
@@ -22,7 +22,7 @@
 </footer>
 
 <div id="bison-container">
-  <img class="bison" alt="Manitoba Bison Logo" title="Service provided by the Government of Manitoba" src="/img/manitoba.gif">
+  <img class="bison" alt="Manitoba Bison Logo" title="A service coordinated by the Public Library Service Branch of the Government of Manitoba" src="/img/manitoba.gif">
 </div>
 
 </body>
